src/objects/PIR_Root_Cause__c.object
<CustomObject>
    <description>This object is created to store all the Root Cause information related to PIR(FAST/PIP) cases. </description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Store status of the Root Cause record</description>
        <inlineHelpText>Indicates whether this value is active or inactive so that it can be filtered accordingly</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Store the Root Cause Information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Store the level of the Root Cause.</description>
        <label>Level</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PIRRootCauseExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>PIRRootCauseExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Root_Cause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self Lookup field.</description>
        <label>Parent Root Cause</label>
        <referenceTo>PIR_Root_Cause__c</referenceTo>
        <relationshipLabel>PIR Root Causes</relationshipLabel>
        <relationshipName>PIR_Root_Causes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Key__c</fullName>
        <description>External Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Root Cause Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>PIR Root Cause</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Root_Cause_Key__c</columns>
        <columns>Parent_Root_Cause__c</columns>
        <columns>Level__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PIR Root Cause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PIR Root Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>